ola-parser/src/testdata/syntaxTests/array/no_array_pop.sol
contract C {
    uint data;
    fn test() public {
      data.pop();
    }
}
// ----
// TypeError 9582: (63-71): Member "pop" not found or not visible after argument-dependent lookup in uint256.
